<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flight Tools</string>
    <string name="title_dictionary1">民航词典</string>
    <string name="title_dictionary2">Cival Aviation</string>
    <string name="title_dictionary3">Dictionary</string>
    <string name="title_abbreviation1">民航缩写</string>
    <string name="title_abbreviation2">Cical Aviation</string>
    <string name="title_abbreviation3">Abbreviation</string>
    <string name="title_icao_iata1">机场代码</string>
    <string name="title_icao_iata2">ICAO &amp; IATA</string>    
    <string name="title_calculator1">计算器</string>
    <string name="title_calculator2">Calculator</string>
    <string name="title_engineering1">航空计算</string>
    <string name="title_engineering2">Aerospace</string>
    <string name="title_engineering3">Computing</string>
    <string name="edit_mark">请输入查询的内容</string>
    <string name="button_search">查询</string>
    <string name="warning1">抱歉！</string>  
    <string name="warning2">未找到结果</string> 
    
    <string name="tab1chs">侧风分量</string>
    <string name="tab1eng">Cross Wind Component</string>
    <string name="tab2chs">飞行纪录本</string>
    <string name="tab2eng">Flight Log</string>
    <string name="tab3chs">时间计算器</string>
    <string name="tab3eng">Time Calculator</string>
        
    <string name="dictionary1">民航词典</string>
	<string name="dictionary2">civil aviation</string>
	<string name="dictionary3">dictionary</string>
	<string name="abbreviation1">民航缩写</string>
	<string name="abbreviation2">civil aviation</string>
	<string name="abbreviation3">abbreviation</string>
	<string name="icao_iata1">三字代码</string>
	<string name="icao_iata2">四字代码</string>
	<string name="icao_iata3">ICAO &amp; IATA</string>
	<string name="calculator1">计算器</string>
	<string name="calculator2">calculator</string>
	<string name="engineering1">工程计算器</string>
	<string name="engineering2">Engineering</string>
	<string name="engineering3">Calculator</string>
	<string name="weather1">天气查询</string>
	<string name="weather2">weather</string>
	<string name="more1">更多···</string>
	<string name="more2">more···</string>
	<string name="about1">关于</string>
	<string name="about2">about</string>
</resources>
